Fix log index with wrong parent controller bug

--- a/app/templates/customers.hbs
+++ b/app/templates/customers.hbs
@@ -175,7 +175,7 @@
 	</section>
 </div>
 
-{{render "logs.index"}}
+{{render "logs.index" model}}
 
 {{#if show_download}}
 	{{partial "modals/download"}}
