--- a/app/templates/components/txn-refund.hbs
+++ b/app/templates/components/txn-refund.hbs
@@ -9,7 +9,8 @@
 	</div>
 	<div class="transaction-body">
 		<div class="row-fluid">
-			<div class="span16">
+			<div class="span2 border-adjust"></div>
+			<div class="span18 border-adjust">
 				<section class="transaction-info">
 					<div class="key-value-display">
 						<header>
@@ -23,7 +24,16 @@
 
 				{{txn-funding-instrument funding_instrument=refund.debit.source}}
 			</div>
-			<div class="span10">
+		</div>
+		<div class="row">
+			<div class="span2 border-adjust"></div>
+			<div class="span18 border-adjust">
+				{{render "logs.index" debit}}
+			</div>
+		</div>
+		<div class="row">
+			<div class="span2 border-adjust"></div>
+			<div class="span18 border-adjust">
 				{{view Balanced.EventsSideBarView contentBinding="refund"}}
 			</div>
 		</div>
