--- a/app/templates/components/txn-refund.hbs
+++ b/app/templates/components/txn-refund.hbs
@@ -28,7 +28,7 @@
 		<div class="row">
 			<div class="span2 border-adjust"></div>
 			<div class="span18 border-adjust">
-				{{render "logs.index" debit}}
+				{{render "logs.index" refund}}
 			</div>
 		</div>
 		<div class="row">
