--- a/static/less/results.less
+++ b/static/less/results.less
@@ -469,10 +469,15 @@ header.results-label h3 {
   }
 }
 .results.embedded {
+  padding-bottom: 40px;
   table.items {
     background-color: white;
     tr {
       border: 2px solid #e7e9ea;
+      .first {
+        width: 186px;
+        padding-left: 12px;
+      }
     }
     td.url {
       a {
