--- a/static/less/results.less
+++ b/static/less/results.less
@@ -479,7 +479,8 @@ header.results-label h3 {
         padding-left: 12px;
       }
     }
-    td.url {
+    td.second {
+      width: 200px;
       a {
         color: @linkColor;
         text-decoration: none;
