--- a/app/templates/components/txn-debit.hbs
+++ b/app/templates/components/txn-debit.hbs
@@ -15,8 +15,7 @@
 
 	<div class="transaction-body">
 		<div class="row-fluid">
-			<div class="span2 border-adjust"></div>
-			<div class="span18 border-adjust">
+			<div class="span25 border-adjust">
 				<section class="transaction-info">
 					<div class="key-value-display">
 						<header>
@@ -30,15 +29,13 @@
 				{{txn-funding-instrument funding_instrument=debit.source}}
 			</div>
 		</div>
-		<div class="row">
-			<div class="span2 border-adjust"></div>
-			<div class="span18 border-adjust">
+		<div class="row-fluid">
+			<div class="span25 border-adjust">
 				{{render "logs.index" debit}}
 			</div>
 		</div>
-		<div class="row">
-			<div class="span2 border-adjust"></div>
-			<div class="span18 border-adjust">
+		<div class="row-fluid">
+			<div class="span25 border-adjust">
 				{{view Balanced.EventsSideBarView contentBinding="debit"}}
 			</div>
 		</div>
