Adjust column width layout

--- a/app/templates/results/logs_embedded_table.hbs
+++ b/app/templates/results/logs_embedded_table.hbs
@@ -11,7 +11,7 @@
                 {{log.message.request.method}} {{log.condensed_request_url}}
                 {{/link-to}}
             </td>
-            <td class="align-right black">
+            <td class="last align-right black">
                 {{#link-to "logs.log" log}}
                 {{colorizeStatus log.message.response.status}}
                 {{/link-to}}
