--- a/static/less/results.less
+++ b/static/less/results.less
@@ -480,7 +480,6 @@ header.results-label h3 {
       }
     }
     td.second {
-      width: 200px;
       a {
         color: @linkColor;
         text-decoration: none;
@@ -490,6 +489,9 @@ header.results-label h3 {
         color: @linkColorHover;
         text-decoration: underline;
       }
+    }
+    td.last {
+      width: 100px;
     }
   }
 }
