--- a/static/less/results.less
+++ b/static/less/results.less
@@ -473,7 +473,7 @@ header.results-label h3 {
   table.items {
     background-color: white;
     tr {
-      border: 2px solid #e7e9ea;
+      border: 2px solid @gray2;
       .first {
         width: 168px;
         padding-left: 12px;
