--- a/app/templates/components/txn-credit.hbs
+++ b/app/templates/components/txn-credit.hbs
@@ -15,7 +15,7 @@
 
 	<div class="transaction-body">
 		<div class="row-fluid">
-			<div class="span16">
+			<div class="span25 border-adjust">
 				<section class="transaction-info">
 					<div class="key-value-display">
 						<header>
@@ -26,10 +26,16 @@
 						{{txn-description transaction=credit}}
 					</div>
 				</section>
-
 				{{txn-funding-instrument funding_instrument=credit.bank_account}}
 			</div>
-			<div class="span10">
+		</div>
+		<div class="row-fluid">
+			<div class="span25 border-adjust">
+				{{render "logs.index" credit}}
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span25 border-adjust">
 				{{view Balanced.EventsSideBarView contentBinding="credit"}}
 			</div>
 		</div>
