--- a/app/templates/components/txn-dispute.hbs
+++ b/app/templates/components/txn-dispute.hbs
@@ -40,7 +40,7 @@
 				{{txn-funding-instrument funding_instrument=dispute.transaction.source}}
 			</div>
 			<div class="span10">
-				{{view Balanced.EventsSideBarView contentBinding="dispute"}}
+				{{view Balanced.ResourceEventsView contentBinding="dispute"}}
 			</div>
 		</div>
 	</div>
