--- a/app/templates/customers.hbs
+++ b/app/templates/customers.hbs
@@ -175,7 +175,7 @@
 	</section>
 </div>
 
-{{render "logs.index" model}}
+{{view Balanced.ResourceLogsView contentBinding="model"}}
 
 {{#if show_download}}
 	{{partial "modals/download"}}
