--- a/app/templates/orders.hbs
+++ b/app/templates/orders.hbs
@@ -77,4 +77,4 @@
 	{{order-customer customer=seller credits=credits reversals=reversals order=model}}
 </div>
 
-{{render "logs.index" model}}
+{{view Balanced.ResourceLogsView contentBinding="model"}}
