--- a/app/templates/components/txn-credit.hbs
+++ b/app/templates/components/txn-credit.hbs
@@ -32,12 +32,12 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{render "logs.index" credit}}
+				{{view Balanced.ResourceLogsView contentBinding="credit"}}
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{view Balanced.EventsSideBarView contentBinding="credit"}}
+				{{view Balanced.ResourceEventsView contentBinding="credit"}}
 			</div>
 		</div>
 	</div>
