--- a/app/templates/components/txn-debit.hbs
+++ b/app/templates/components/txn-debit.hbs
@@ -32,12 +32,12 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{render "logs.index" debit}}
+				{{view Balanced.ResourceLogsView contentBinding="debit"}}
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{view Balanced.EventsSideBarView contentBinding="debit"}}
+				{{view Balanced.ResourceEventsView contentBinding="debit"}}
 			</div>
 		</div>
 	</div>
