--- a/app/templates/components/txn-hold.hbs
+++ b/app/templates/components/txn-hold.hbs
@@ -32,12 +32,12 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{render "logs.index" hold}}
+				{{view Balanced.ResourceLogsView contentBinding="hold"}}
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{view Balanced.EventsSideBarView contentBinding="hold"}}
+				{{view Balanced.ResourceEventsView contentBinding="hold"}}
 			</div>
 		</div>
 	</div>
