--- a/app/templates/components/txn-refund.hbs
+++ b/app/templates/components/txn-refund.hbs
@@ -26,12 +26,12 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{render "logs.index" refund}}
+				{{view Balanced.ResourceLogsView contentBinding="refund"}}
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{view Balanced.EventsSideBarView contentBinding="refund"}}
+				{{view Balanced.ResourceEventsView contentBinding="refund"}}
 			</div>
 		</div>
 	</div>
