--- a/app/templates/components/txn-reversal.hbs
+++ b/app/templates/components/txn-reversal.hbs
@@ -26,12 +26,12 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{render "logs.index" reversal}}
+				{{view Balanced.ResourceLogsView contentBinding="reversal"}}
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span25 border-adjust">
-				{{view Balanced.EventsSideBarView contentBinding="reversal"}}
+				{{view Balanced.ResourceEventsView contentBinding="reversal"}}
 			</div>
 		</div>
 	</div>
